--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "livewire/livewire": "^2.3",
         "luecano/numero-a-letras": "^2.2",
         "maatwebsite/excel": "^3.1",
-        "owen-it/laravel-auditing": "^10.0",
+        "owen-it/laravel-auditing": "^13.0",
         "phpoffice/phpword": "^0.18.1",
         "setasign/fpdf": "^1.8",
         "setasign/fpdi": "^2.3",
@@ -35,7 +35,7 @@
         "barryvdh/laravel-debugbar": "^3.5",
         "barryvdh/laravel-ide-helper": "^2.10",
         "facade/ignition": "^2.3.6",
-        "fzaninotto/faker": "^1.9.1",
+        "fakerphp/faker": "^1.20",
         "laravel/sail": "^1.12",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^5.0",
