--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,11 +10,11 @@ jobs:
     name: Add issue to project
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/add-to-project@RELEASE_VERSION
+      - uses: actions/add-to-project@v0.3.0
         with:
           # You can target a repository in a different organization
           # to the issue
           project-url: https://github.com/orgs/cl-ssi/projects/3
           github-token: ${{ secrets.PROJECT_TOKEN }}
-          labeled: bug, needs-triage
+          labeled: bug, improvement, needs-triage
           label-operator: OR
