--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Add bugs to bugs project
+name: Adds all issues that don't include the 'needs-triage' labels to project board
 
 on:
   issues:
@@ -16,5 +16,5 @@ jobs:
           # to the issue
           project-url: https://github.com/orgs/cl-ssi/projects/3
           github-token: ${{ secrets.PROJECT_TOKEN }}
-          labeled: bug, improvement, needs-triage
-          label-operator: OR
+          labeled: needs-triage
+          label-operator: NOT
