--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,9 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3",
+        "php": "^7.4|^8.1",
         "ext-gd": "*",
+        "aquaro/laravel-maintenance-mode": "^0.1.1",
         "barryvdh/laravel-dompdf": "^2.0",
         "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.2",
