post max size 55

--- a/docker/php.ini
+++ b/docker/php.ini
@@ -1,3 +1,3 @@
-post_max_size = 50M
-max_execution_time = 60
-memory_limit = 256
+post_max_size = 55M
+# max_execution_time = 60
+# memory_limit = 256
