--- a/docker/php.ini
+++ b/docker/php.ini
@@ -1,3 +1,7 @@
-post_max_size = 55M
+# Para subir archivos
+post_max_size = 50M
+
+# Por favor no exederse en estos valores
+# Optimizar el código
 max_execution_time = 60
 memory_limit = 256M
