upload_max_filesize = 50M

--- a/docker/php.ini
+++ b/docker/php.ini
@@ -1,7 +1,9 @@
 # Para subir archivos
 post_max_size = 50M
+upload_max_filesize = 50M
+max_file_uploads = 20
 
-# Por favor no exederse en estos valores
+# Por favor no excederse en estos valores
 # Optimizar el código
 max_execution_time = 60
 memory_limit = 256M
