--- a/.env.example
+++ b/.env.example
@@ -10,8 +10,10 @@ DEBUGBAR_ENABLED=true
 APP_SS="Servicio de Salud Iquique"
 APP_SS_ADDRESS="Anibal Pinto #815, Iquique"
 APP_SS_TELEPHONE="572409495"
-APP_SS_WEBSITE="www.saludiquique.cl"
+APP_SS_WEBSITE="www.saludiquique.gob.cl"
 APP_SS_EMAIL="sistemas.ssi@redsalud.gob.cl"
+APP_SS_ID=2
+APP_SS_ESTABLISHMENTS=1,38,41
 
 # Clave unica Producción
 CLAVEUNICA_SCOPE=openid+run+name+email
