--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.4|^8.1",
         "ext-gd": "*",
+        "actived/microsoft-teams-notifier": "*",
         "aquaro/laravel-maintenance-mode": "^0.1.1",
         "barryvdh/laravel-dompdf": "^2.0",
         "doctrine/dbal": "^2.10",
