--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "setasign/fpdi": "^2.3",
         "spatie/laravel-permission": "^3.13",
         "stackkit/laravel-google-cloud-scheduler": "^2.0",
+        "stackkit/laravel-google-cloud-tasks-queue": "^3.5",
         "superbalist/laravel-google-cloud-storage": "^2.2"
     },
     "require-dev": {
