Google Task implementation

--- a/.env.example
+++ b/.env.example
@@ -31,10 +31,19 @@ FIRMA_URL=https://api.firma.digital.gob.cl/firma/v2/files/tickets
 FIRMA_API_TOKEN=
 FIRMA_SECRET=
 
+# PARAMETROS GOOGLE CLOUD
+GOOGLE_CLOUD_PROJECT_ID=
+GOOGLE_CLOUD_LOCATION=us-central1
+
 # NOMBRE DEL ARCHIVO JSON ALOJADO EN EL PROYECTO QUE TIENE EL SERVICE ACCOUNT
 GOOGLE_CLOUD_SERVICE_ACCOUNT=/
-GOOGLE_CLOUD_PROJECT_ID=
 GOOGLE_CLOUD_STORAGE_BUCKET=
+
+# GOOGLE TASK
+#GOOGLE_CLOUD_PROJECT_ID= // ya está definido arribaarriba
+GOOGLE_CLOUD_TASKS_QUEUE=
+GOOGLE_CLOUD_TASKS_SERVICE_EMAIL=
+GOOGLE_CLOUD_TASKS_HANDLER=STACKKIT_CLOUD_TASKS_HANDLER
 
 FONASA_ENTIDAD=
 FONASA_CLAVE=
