feat: add the signature_mode in the .env

--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,7 @@ CLAVEUNICA_CALLBACK=
 FIRMA_URL=https://api.firma.digital.gob.cl/firma/v2/files/tickets
 FIRMA_API_TOKEN=
 FIRMA_SECRET=
+FIRMA_MODO="test"
 
 # NOMBRE DEL ARCHIVO JSON ALOJADO EN EL PROYECTO QUE TIENE EL SERVICE ACCOUNT
 GOOGLE_CLOUD_SERVICE_ACCOUNT=/
