--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "firebase/php-jwt": "^5.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "h4cc/wkhtmltopdf-amd64": "0.12.x",
         "laminas/laminas-escaper": "^2.7",
         "laravel/framework": "^8.0",
         "laravel/passport": "10.3.0",
