modificado el nginx.conf del docker anti clickjak

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -18,6 +18,10 @@ http {
             try_files $uri $uri/ /index.php?$query_string;
         }
 
+        add_header X-Frame-Options "SAMEORIGIN";
+        add_header Content-Security-Policy "frame-ancestors 'none';";
+        # add_header Content-Security-Policy "frame-ancestors 'self';";
+
         location = /favicon.ico { access_log off; log_not_found off; }
         location = /robots.txt  { access_log off; log_not_found off; }
         access_log /dev/stdout;
