--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -9,8 +9,15 @@ http {
     keepalive_timeout  65;
 
     server {
+        listen LISTEN_PORT;
+        server_name i.saludiquique.gob.cl;
+        return 301 $scheme://i.saludtarapaca.gob.cl$request_uri;
+    }
+
+    server {
         listen LISTEN_PORT default_server;
-        server_name _;
+        # server_name _;
+        server_name i.saludtarapaca.gob.cl;
         root /app/public;
         index index.php;
         charset utf-8;
