--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -26,7 +26,7 @@ http {
         }
 
         add_header X-Frame-Options "SAMEORIGIN";
-        add_header Content-Security-Policy "frame-ancestors 'none';";
+        add_header Content-Security-Policy "frame-ancestors 'self';";
         # add_header Content-Security-Policy "frame-ancestors 'self';";
 
         location = /favicon.ico { access_log off; log_not_found off; }
