--- a/.env.example
+++ b/.env.example
@@ -3,15 +3,15 @@ APP_NAME="iOnline"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=https://i.saludiquique.cl
+APP_URL=https://i.saludtarapaca.gob.cl
 
 DEBUGBAR_ENABLED=true
 
-APP_SS="Servicio de Salud Iquique"
+APP_SS="Servicio de Salud Tarapacá"
 APP_SS_ADDRESS="Anibal Pinto #815, Iquique"
 APP_SS_TELEPHONE="572409495"
 APP_SS_WEBSITE="www.saludiquique.gob.cl"
-APP_SS_EMAIL="sistemas.ssi@redsalud.gob.cl"
+APP_SS_EMAIL="sistemas.sst@redsalud.gob.cl"
 APP_SS_ID=2
 APP_SS_ESTABLISHMENTS=1,38,41
 
