.env.example con Firma Desatendia

--- a/.env.example
+++ b/.env.example
@@ -31,6 +31,8 @@ FIRMA_URL=https://api.firma.digital.gob.cl/firma/v2/files/tickets
 FIRMA_API_TOKEN=
 FIRMA_SECRET=
 FIRMA_MODO="test"
+FIRMA_API_TOKEN_DESATENDIDO=
+FIRMA_SECRET_DESATENDIDO=
 
 # PARAMETROS GOOGLE CLOUD
 GOOGLE_CLOUD_PROJECT_ID=
