--- a/.env.example
+++ b/.env.example
@@ -48,8 +48,12 @@ GOOGLE_CLOUD_TASKS_QUEUE=
 GOOGLE_CLOUD_TASKS_SERVICE_EMAIL=
 GOOGLE_CLOUD_TASKS_HANDLER=STACKKIT_CLOUD_TASKS_HANDLER
 
+# INTEGRACIÓN FONASA
 FONASA_ENTIDAD=
 FONASA_CLAVE=
+
+# INTEGRACIÓN MERCADO PUBLICO
+TICKET_MERCADO_PUBLICO= 
 
 LOG_CHANNEL=stack
 
@@ -100,5 +104,3 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-
-TICKET_MERCADO_PUBLICO=
