--- a/.env.example
+++ b/.env.example
@@ -52,6 +52,8 @@ GOOGLE_CLOUD_TASKS_HANDLER=STACKKIT_CLOUD_TASKS_HANDLER
 FONASA_ENTIDAD=
 FONASA_CLAVE=
 
+WSSSI_CHILE_URL=
+
 # INTEGRACIÓN MERCADO PUBLICO
 TICKET_MERCADO_PUBLICO= 
 
