--- a/composer.json
+++ b/composer.json
@@ -8,43 +8,41 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.4|^8.1",
+        "php": "^8.1",
         "ext-gd": "*",
-        "actived/microsoft-teams-notifier": "*",
+        "actived/microsoft-teams-notifier": "^1.0",
         "aquaro/laravel-maintenance-mode": "^0.1.1",
         "barryvdh/laravel-dompdf": "^2.0",
         "doctrine/dbal": "^2.10",
-        "fideloper/proxy": "^4.2",
-        "firebase/php-jwt": "^5.2",
-        "fruitcake/laravel-cors": "^2.0",
-        "guzzlehttp/guzzle": "^7.0.1",
+        "firebase/php-jwt": "^6.8",
+        "guzzlehttp/guzzle": "^7.7",
         "laminas/laminas-escaper": "^2.7",
-        "laravel/framework": "^8.0",
-        "laravel/passport": "10.3.0",
+        "laravel/framework": "^9.0",
+        "laravel/passport": "^11.8",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.0",
         "livewire/livewire": "^2.3",
         "luecano/numero-a-letras": "^2.2",
         "maatwebsite/excel": "^3.1",
-        "owen-it/laravel-auditing": "^13.0",
-        "phpoffice/phpword": "^0.18.1",
+        "owen-it/laravel-auditing": "^13.5",
+        "phpoffice/phpword": "^1.1",
         "setasign/fpdf": "^1.8",
         "setasign/fpdi": "^2.3",
         "simplesoftwareio/simple-qrcode": "^4.2",
-        "spatie/laravel-permission": "^3.13",
+        "spatie/laravel-google-cloud-storage": "^2.2",
+        "spatie/laravel-permission": "^5.10",
         "stackkit/laravel-google-cloud-scheduler": "^2.0",
-        "stackkit/laravel-google-cloud-tasks-queue": "^3.5",
-        "superbalist/laravel-google-cloud-storage": "^2.2"
+        "stackkit/laravel-google-cloud-tasks-queue": "^3.6"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.5",
-        "barryvdh/laravel-ide-helper": "^2.10",
-        "facade/ignition": "^2.3.6",
+        "barryvdh/laravel-debugbar": "^3.8",
+        "barryvdh/laravel-ide-helper": "^2.13",
         "fakerphp/faker": "^1.20",
         "laravel/sail": "^1.12",
         "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.0"
+        "nunomaduro/collision": "^6.1",
+        "phpunit/phpunit": "^9.0",
+        "spatie/laravel-ignition": "^1.0"
     },
     "config": {
         "optimize-autoloader": true,
