feat: add auth_token variable

--- a/.env.example
+++ b/.env.example
@@ -55,7 +55,7 @@ FONASA_CLAVE=
 WSSSI_CHILE_URL=
 
 # INTEGRACIÓN MERCADO PUBLICO
-TICKET_MERCADO_PUBLICO= 
+TICKET_MERCADO_PUBLICO=
 
 LOG_CHANNEL=stack
 
@@ -106,3 +106,5 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+AUTH_TOKEN=
