Update dte fix intento 3

--- a/.env.example
+++ b/.env.example
@@ -38,6 +38,9 @@ FIRMA_SECRET_DESATENDIDO=
 GOOGLE_CLOUD_PROJECT_ID=
 GOOGLE_CLOUD_LOCATION=us-central1
 
+# Default filesystem local o gcs
+FILESYSTEM_DRIVER=local
+
 # NOMBRE DEL ARCHIVO JSON ALOJADO EN EL PROYECTO QUE TIENE EL SERVICE ACCOUNT
 GOOGLE_CLOUD_SERVICE_ACCOUNT=/
 GOOGLE_CLOUD_STORAGE_BUCKET=
