Test nginx  fastcgi_hide_header

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -7,6 +7,9 @@ http {
     include       mime.types;
     sendfile        on;
     keepalive_timeout  65;
+    
+    # Hide PHP headers
+    fastcgi_hide_header             X-Powered-By;
 
     server {
         listen LISTEN_PORT;
