Test expose_php = Off

--- a/docker/php.ini
+++ b/docker/php.ini
@@ -9,4 +9,4 @@ max_execution_time = 60
 memory_limit = 256M
 
 # Ocultar la version de PHP en $ curl --head url...
-#expose_php = Off
+expose_php = Off
