MERCADOPUBLICO Utilizando WSSI

--- a/.env.example
+++ b/.env.example
@@ -55,6 +55,7 @@ GOOGLE_CLOUD_TASKS_HANDLER=STACKKIT_CLOUD_TASKS_HANDLER
 FONASA_ENTIDAD=
 FONASA_CLAVE=
 
+WSSSI_URL=
 WSSSI_CHILE_URL=
 
 # INTEGRACIÓN MERCADO PUBLICO
