FIX:GOB.GOB error

--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ DEBUGBAR_ENABLED=true
 APP_SS="Servicio de Salud Tarapacá"
 APP_SS_ADDRESS="Anibal Pinto #815, Iquique"
 APP_SS_TELEPHONE="572409495"
-APP_SS_WEBSITE="www.saludtarapaca.gob.gob.cl"
+APP_SS_WEBSITE="www.saludtarapaca.gob.cl"
 APP_SS_EMAIL="sistemas.sst@redsalud.gob.cl"
 APP_SS_ID=2
 APP_SS_ESTABLISHMENTS=1,38,41
