DocDigital:Integración:Pruebas

--- a/.env.example
+++ b/.env.example
@@ -59,6 +59,10 @@ WSSSI_URL=
 WSSSI_CHILE_URL=
 WSSSI_AUTH_TOKEN=
 
+DOC_DIGITAL_URL=https://api-demodoc.digital.gob.cl/api
+DOC_DIGITAL_CLIENT_ID=
+DOC_DIGITAL_SECRET=
+
 # INTEGRACIÓN MERCADO PUBLICO
 TICKET_MERCADO_PUBLICO=
 
