DigitalSignature Nuevo Modelo

--- a/.env.example
+++ b/.env.example
@@ -30,7 +30,9 @@ CLAVEUNICA_CALLBACK=
 FIRMA_URL=https://api.firma.digital.gob.cl/firma/v2/files/tickets
 FIRMA_API_TOKEN=
 FIRMA_SECRET=
+FIRMA_ENTITY="Servicio de Salud Iquique"
 FIRMA_MODO="test"
+
 FIRMA_API_TOKEN_DESATENDIDO=
 FIRMA_SECRET_DESATENDIDO=
 
