DigitalSignature Proposito iOnline cambio de env

--- a/.env.example
+++ b/.env.example
@@ -26,15 +26,13 @@ CLAVEUNICA_CALLBACK=
 #CLAVEUNICA_SECRET_ID=
 #CLAVEUNICA_CALLBACK=
 
+FIRMA_ENTITY="Servicio de Salud Iquique"
 # API Firma Digital GOB
 FIRMA_URL=https://api.firma.digital.gob.cl/firma/v2/files/tickets
 FIRMA_API_TOKEN=
 FIRMA_SECRET=
-FIRMA_ENTITY="Servicio de Salud Iquique"
-FIRMA_MODO="test"
-
-FIRMA_API_TOKEN_DESATENDIDO=
-FIRMA_SECRET_DESATENDIDO=
+FIRMA_API_TOKEN_IONLINE=
+FIRMA_SECRET_IONLINE=
 
 # PARAMETROS GOOGLE CLOUD
 GOOGLE_CLOUD_PROJECT_ID=
