--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
         "barryvdh/laravel-debugbar": "^3.8",
         "barryvdh/laravel-ide-helper": "^2.13",
         "fakerphp/faker": "^1.20",
+        "kitloong/laravel-migrations-generator": "^6.11",
         "laravel/sail": "^1.12",
         "mockery/mockery": "^1.3.1",
         "nunomaduro/collision": "^6.1",
